--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,6 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  form(method="post")
+    input(type="text" name="text")
+    input(type="submit")
