--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,14 @@ doctype html
 html
   head
     title= title
+    meta(charset="utf-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no")
+    meta(name="full-screen" content="yes")
+    meta(name="format-detection" content="telephone=no,email=no")
+    meta(name="full-screen" content="yes")
+    meta(name="apple-mobile-web-app-capable" content="yes")
+    meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
+    
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
