静态资源结构目录调整

--- a/asserts/admin/login.jade
+++ b/asserts/admin/login.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-  body(id="admin/login")
+  body
     .ui.middle.aligned.center.aligned.grid
       .column
         form.ui.large.form
@@ -14,5 +14,5 @@ block content
               .ui.left.icon.input
                 i.lock.icon
                 input(type="password", name="password", placeholder="Password")
-            .ui.fluid.large.teal.submit.button.js_login_submit Login
+            .ui.fluid.large.teal.submit.button Login
           .ui.error.message
