--- a/asserts/layout.jade
+++ b/asserts/layout.jade
@@ -11,10 +11,8 @@ html
     meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
     
     link(rel='stylesheet', href='/dist/semantic.css')
-    link(rel='stylesheet', href='/styles/sass/style.css')
-    
-    script(src="/scripts/libs/require.js", data-main="/scripts/coffee/main.js")
-    
+    link(rel='stylesheet', href='/styles/sass/style.css?v=a3e21d3981')
+  
   block content
   
   
