--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -4,5 +4,9 @@
 .secondary.pointing.menu .toc.item
   display: none
 
+.hide
+  display: none !important
+
 @import "admin/login"
 @import "blog/add"
+@import "common/code"
