--- a/views/admin/nav.jade
+++ b/views/admin/nav.jade
@@ -10,7 +10,7 @@
       - if(active && active == 'blog')
         a.item.active(href="/blog") 博客
       - else
-        a.item(href="/blog/add") 博客
+        a.item(href="/blog") 博客
       a.item 关于
       .item.right
         a.ui.button.inverted(href="/admin/login") 登录
